--- a/back/views/admin/novedades.hbs
+++ b/back/views/admin/novedades.hbs
@@ -14,7 +14,7 @@
   <!-- Fila 2: Título -->
   <div class="row">
     <div class="col-7">
-      <h3>Listado de Productos</h3>
+      <h3>Nuestros vehiculos</h3>
     </div>
     <div class="col-5 text-end">
       <a class="btn btn-success" href="/admin/novedades/nuevo">
@@ -32,7 +32,7 @@
           <tr>
             <th scope="col">#</th>
             <th scope="col">Nombre</th>
-            <th scope="col">Imagen</th>
+            <th scope="col">descripcion</th>
             <th scope="col" class="text-end">Acciones</th>
           </tr>
         </thead>
@@ -45,7 +45,7 @@
                 {{#if img_id}}
                   <img src="https://res.cloudinary.com/tu-cloud-name/image/upload/{{img_id}}" width="100" />
                 {{else}}
-                  Sin imagen
+                  
                 {{/if}}
               </td>
               <td class="text-end">
