--- a/front/src/styles/home.css
+++ b/front/src/styles/home.css
@@ -1,40 +1,51 @@
+
+
+.columnas {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+
 .bienvenidos {
-    width: 75%;
-    padding-right: 10px;
-    box-sizing: border-box;
+  width: 75%;
+  padding-right: 10px;
+  box-sizing: border-box;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .testimonios {
-    width: 25%;
-}
-
-.columnas {
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-} 
-
-.bienvenidos p {
-    font-size: 20px;
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  gap: 15px; /* Espacio entre los bloques de testimonios */
 }
 
 .testimonio {
-    background-color: white;
-    padding: 16px;
+  background-color: white;
+  padding: 16px;
+  display: flex; /* Para alinear el contenido interno */
+  flex-direction: column; /* Para alinear cita y autor verticalmente */
+  justify-content: space-between; /* Espacia la cita y el autor */
+  flex-grow: 1; /* Permite que los testimonios crezcan para tener la misma altura */
 }
 
 .testimonio .cita {
-    font-weight: bold;
-    font-style: italic;
-    font-size: 22px;
-    background-color: pink;
-    display: block;
+  font-weight: bold;
+  font-style: italic;
+  font-size: 22px;
+  background-color: #87CEFA;
+  display: block;
+  margin-bottom: 8px; /* Espacio entre la cita y el autor */
 }
 
 .testimonio .autor {
-    font-size: 10px;
-    text-align: center;
-    background-color: pink;
-    display: block;
-    margin: 12px;
+  font-size: 10px;
+  text-align: center;
+  background-color: beige;
+  display: block;
+  margin-top: auto; /* Empuja el autor hacia la parte inferior */
+}
+
+.p {
+    letter-spacing: 0.2em;
 }
