--- a/front/src/styles/nav.css
+++ b/front/src/styles/nav.css
@@ -1,5 +1,5 @@
 nav {
-    background-color: #6da9ed;
+    background-color: beige;
     margin-bottom: 20px;
 }
 
@@ -15,7 +15,7 @@ nav ul li {
 
 }
 nav ul li a {
-    color: white; 
+    color:black; 
     text-decoration: none;
     padding: 3px 6px;
     display: block;
@@ -28,5 +28,5 @@ nav ul li a:hover {
 }
 
 nav ul li a.activo {
-    background-color: cadetblue;
+    background-color: #E0FFFF;
 }
