--- a/back/views/admin/layout.hbs
+++ b/back/views/admin/layout.hbs
@@ -10,7 +10,7 @@
     <header>
         <div className="holder">
             <img src="/images/logo192.png" width="100" alt="Transporte">
-          <h1>Transportes</h1>
+          <h1>Transportes Elix</h1>
         </div>
       </header>
     {{{body}}}
